# mlpregression

./: Dockerfile  README.md  SECURITY.md  Untitled.ipynb  demo.ipynb  model.h5  model.py  pyproject.toml  requirements.txt  server.py
